css/index.css
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Work+Sans:wght@300;500&display=swap');

:root {
  --font-base: 'Work Sans', sans-serif;
  --font-heading: 'Archivo Black', sans-serif;
  --color-white: #fff;
  --color-black: #000;
  --color-grey: #777;
  --color-lightgrey: #DDD;
  --color-darkgrey: #323232;
  --color-tint: #f1f1f1;
  --color-accent: #BB5495;
  --color-brand: #ff2323;
}

[data-theme="dark"] {
  --color-white: #000;
  --color-black: #fff;
  --color-lightgrey: #323232;
  --color-darkgrey: #DDD;
  --color-tint: #1C1C1C;
}

[data-theme="dark"] img,
[data-theme="dark"] .pie-chart {
  opacity: .85;
}

* {
  box-sizing: border-box;
  transition: background 2s, color .2s;
}
body {
  background: var(--color-tint);
  color: var(--color-darkgrey);
  font-family: var(--font-base);
  font-size: 16px;
  font-weight: 300;
  line-height: 1.6em;
  margin: 0;
  padding: 0;
}
p {
  margin: 0 0 2em;
  max-width: 35em;
  padding: 0;
}
p.bump {
  font-size: 1.4em;
  line-height: 1.4em;
}
p.small {
  font-size: .8em;
}
h1,
h2,
h3,
h4 {
  color: var(--color-black);
  font-family: var(--font-heading);
  font-weight: 400;
  line-height: 1.2em;
  margin: 0 0 1.4rem;
  max-width: 16em;
}
h1 {
  font-size: 1.8em;
}
h1.bump {
  font-size: 2.2em;
}
h2 {
  font-size: 1.4em;
}
h3 {
  font-size: 1em;
}
h4 {
  font-size: 1em;
  font-weight: bold;
  padding-bottom: 0;
}
h5,
cite,
small {
  font-size: .8em;
  color: var(--color-grey);
}
img {
  height: auto;
  max-width: 100%;
}
picture {
  display: block;
  line-height: 0;
}
figure {
  line-height: 0;
  margin: 0 0 2em;
  position: relative;
}
figcaption {
  background-color: rgba(0,0,0,0.8);
  bottom: 0;
  color: #f2f2f2;
  display: inline-block;
  font-size: .8em;
  line-height: 1em;
  padding: 4px 8px;
  position: absolute;
}
a[href]:not([class]) {
  color: var(--color-accent);
  background: -webkit-linear-gradient(43deg, #ff2323 0%, #BB5495 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: 100%;
  font-weight: 500;
  transition: all .8s;
  text-decoration: none;
}
a[href]:not([class]):hover {
  color: var(--color-brand);
  background-size: 200%;
  background-position: -100%;
  display: inline-block;
}

header:after {
  clear: both;
  content: "";
  display: table;
}
table {
  margin: 1em 0;
}
table td,
table th {
  padding-right: 1em;
}
pre,
code {
  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
  line-height: 1.5;
}
pre {
  font-size: 14px;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  background-color: #f6f6f6;
}
blockquote {
  font-style: italic;
  margin-bottom: 2em;
  position: relative;
}
blockquote p {
  margin: 0;
}
blockquote p:before,
blockquote p:after {
  color: #777;
  font-size: 3em;
  font-style: normal;
  line-height: 1em;
  opacity: .6;
  position: absolute;
}
blockquote p:before {
  content: open-quote;
  margin-left: -32px;
}
blockquote p:after {
  content: close-quote;
  margin-left: 8px;
}
.highlight-line {
  color: inherit;
  display: block;
  padding: 0.125em 1em;
  text-decoration: none;
}

.highlight-line:empty:before {
  content: " ";
}
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #2E2E2E;
}
.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}
.highlight-line-add {
  background-color: #45844b;
}
.highlight-line-remove {
  background-color: #902f2f;
}

/* Utilities */
.list-reset {
  list-style: none;
  margin: 0;
  padding: 0;
}
.margin-reset {
  margin: 0;
}

/* Components */
ul:not([class]) li {
  padding-left: 8px;
}
ul:not([class]) li::marker {
  content: "◼";
}

.pie-chart {
  margin-bottom: 2em !important;
}
.pie-chart h2 {
  font-size: .8em !important;
  color: black;
}
.pie-chart cite {
  padding-bottom: .5em !important;
  bottom: 1em !important;
}

/* Header */
header#masthead {
  background-color: var(--color-white);
  padding: 0 16px;
  border-top: 4px solid var(--color-accent);
  position: relative;
}

header#masthead:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 4px;
  background: -webkit-linear-gradient(43deg, #BB5495 0%, #ff2323 100%);
  top: -4px;
  left: 0;
}

header#masthead .container {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  padding-top: 16px;
  padding-bottom: 12px;
}

/* Logo */
a.logo {
  display: flex;
  align-items: center;
  margin-right: 40px;
  padding-top: 4px;
  padding-bottom: 4px;
}
#logo-mark {
  height: 38px;
  width: 28px;
  fill: url(#brand-gradient);
  margin-right: 16px;
}
#brand-gradient {
  --color-stop: #ff2323;
  --color-bot: #BB5495;
}
a.logo span {
  font-family: var(--font-heading);
  color: var(--font-accent);
  background: -webkit-linear-gradient(43deg, #ff2323 0%, #BB5495 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-size: 1.4em;
  text-decoration: none;
  line-height: 1.2em;
}

/* Nav */
nav ul.nav {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: -16px;
}
nav ul.nav .nav-item {
  display: inline-block;
  margin: 0 8px;
}
nav ul.nav .nav-item a.nav-item-link {
  color: var(--color-accent);
  font-family: var(--font-heading);
  padding: 8px;
  display: inline-block;
}
nav ul.nav .nav-item a[href]:not(:hover) {
  text-decoration: none;
}
nav ul.nav .nav-item-active a.nav-item-link {
  color: var(--color-brand);
}

/* Footer */
footer {
  background: var(--color-white);
  margin-top: 1em;
  padding: 32px 16px;
  text-align: center;
  width: 100%;
}
footer * {
  max-width: none;
}
footer div div {
  margin: 1.5em auto;
}

/* Posts list */
ul.postlist {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 24px;
  margin-bottom: 24px;
}
ul.postlist li.postlist-item-card {
  display: flex;
  -webkit-transition: all .5s;
  transition: all .5s;
}
ul.postlist li.postlist-item-card:hover {
  transform: scale(1.05);
}
ul.postlist li.postlist-item-card a {
  background: var(--color-white);
  color: var(--color-darkgrey);
  display: flex;
  flex: auto;
  font-weight: 300;
  text-decoration: none;
  padding-bottom: 1em;
}
[data-theme="dark"] ul.postlist li.postlist-item-card a {
  background: #323232;
}
ul.postlist li.postlist-item-card .postlist-item-content {
  display: flex;
  flex-direction: column;
}
ul.postlist li.postlist-item-card .postlist-item-content img {
  margin-bottom: 1em;
}
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-title,
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-description,
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-tags {
  display: block;
  padding: 0 1em;
}
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-tags {
  margin-top: auto;
}

/* Post */
.brattco-post {
  overflow: hidden;
}
.brattco-post .container {
  margin: 0 auto;
  max-width: 800px;
  width: 100%;
}
.brattco-post .container figure {
  max-width: 1000px;
  width: 100%;
}
.brattco-post .post-banner-container {
  position: relative;
  overflow: hidden;
  height: 420px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #323232;
  margin: 0 -16px;
}
.brattco-post .post-banner-container img {
  filter: brightness(40%);
  left: -23%;
  opacity: 0.8;
  min-height: 110%;
  min-width: 150%;
  object-fit: cover;
  pointer-events: none;
  position: absolute;
  top: 0;
}
.brattco-post .post-banner-content {
  color: white;
  position: relative;
  z-index: 1;
  display: block;
  z-index: 1000;
  margin: 2em auto;
  width: 75%;
  max-width: 600px;
  text-align: center;
}
.brattco-post .post-banner-content h1 {
  color: white;
}
.brattco-post .post-banner-content .post-tags {
  margin: 2em auto 0;
}

/* Tags */
.post-tag {
  display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
  line-height: 1em;
  padding: 8px;
  margin-left: 8px;
  background-color: var(--color-darkgrey);
  color: var(--color-white);
  border-radius: 4px;
  text-decoration: none;
}
a[href].post-tag,
a[href].post-tag:visited {
  color: #fff;
}

.tags .tag::after {
    content: ", ";
}
.tags .tag:last-of-type::after {
    content: "";
    margin: 0;
}

/* Warning */
.warning {
  background-color: #ffc;
  padding: 1em 0.625em; /* 16px 10px /16 */
}
.warning ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: .1em;
}
a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
  color: #aaa;
}

/* Structure */
main {
  padding: 0 16px;
}
.container {
  max-width: 1300px;
  margin: 0 auto;
}
.page-content {
  padding-top: 40px;
}

@media screen and (min-width: 480px) {
  ul.postlist {
    grid-template-columns: repeat(2,1fr);
  }
  .brattco-post .post-banner-container img {
    min-height: 120%;
    min-width: 100%;
    left: 0;
  }
}

@media screen and (min-width: 960px) {
  body,
  html {
    font-size: 1.1em;
  }
  h1 {
    font-size: 1.9em;
  }
  main,
  header#masthead,
  footer {
    padding: 0 32px;
  }
  footer .container {
    display: flex;
    justify-content: space-between;
  }
  footer .social {
    flex-grow: .5;
  }
  footer div div {
    display: flex;
    align-items: flex-end;
    margin: 1.5em 0;
  }
  .brattco-post .post-banner-container {
    height: 480px;
    margin: 0 -32px;
  }
  .brattco-post .container figure img {
    margin-left: -10%;
    max-width: 960px;
    width: 120%;
  }
  ul.postlist {
    grid-template-columns: repeat(3,1fr);
  }
}

@media screen and (min-width: 1200px) {
  h1 {
    font-size: 2.4em;
  }
  h1.bump {
    font-size: 3em;
  }
  .container {
    max-width: 1140px;
    width: 162.5%;
  }
  ul.postlist {
    gap: 48px;
    margin-bottom: 48px;
  }
}

